--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ body{
   margin:0;
   font-family:Arial, Helvetica, sans-serif;
   background:#eef1f5;
-  color:#222;
 }
 header{
   display:flex;
@@ -18,7 +17,7 @@ header{
   align-items:center;
   padding:18px 28px;
   background:#0b2a5b;
-  color:#fff;
+  color:white;
 }
 .brand{
   display:flex;
@@ -27,57 +26,66 @@ header{
   font-size:20px;
   font-weight:700;
 }
-.lang-select select{
-  color:#000;
-  padding:6px 8px;
-}
+select{padding:6px}
+
 main{
-  max-width:920px;
-  margin:40px auto;
-  background:#fff;
+  max-width:900px;
+  margin:50px auto;
+  background:white;
   padding:40px;
   border-radius:10px;
-  box-shadow:0 12px 30px rgba(0,0,0,.12);
+  box-shadow:0 10px 30px rgba(0,0,0,.15);
+  position:relative;
 }
-.actions{
-  margin-top:28px;
-}
-button{
+
+.buttons button{
   padding:12px 22px;
-  margin-right:10px;
-  margin-top:10px;
+  margin:10px 10px 0 0;
   border:none;
   border-radius:6px;
   background:#0b2a5b;
-  color:#fff;
+  color:white;
   cursor:pointer;
   font-size:15px;
 }
-button:hover{background:#123b7a}
+.buttons button:hover{background:#123b7a}
 
-.loader{
-  margin-top:24px;
-  text-align:center;
+.overlay{
+  position:absolute;
+  inset:0;
+  background:rgba(255,255,255,.92);
   display:none;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  text-align:center;
 }
+
 .spinner{
-  width:40px;
-  height:40px;
-  border:4px solid #d8dbe2;
+  width:44px;
+  height:44px;
+  border:4px solid #ddd;
   border-top:4px solid #0b2a5b;
   border-radius:50%;
   animation:spin 1s linear infinite;
-  margin:0 auto 12px;
+  margin-bottom:16px;
 }
+
 @keyframes spin{to{transform:rotate(360deg)}}
 
-.footer{
-  margin-top:60px;
-  padding:26px;
+.error{
+  color:#a00;
+  margin-top:12px;
+  font-size:14px;
+}
+
+footer{
   text-align:center;
   font-size:13px;
   color:#666;
+  padding:25px;
   background:#f4f6f9;
+  margin-top:60px;
 }
 </style>
 </head>
@@ -86,105 +94,113 @@ button:hover{background:#123b7a}
 
 <header>
   <div class="brand">⚽ כדורגל נתניה</div>
-  <div class="lang-select">
-    <select id="lang">
-      <option value="he">עברית</option>
-      <option value="en">English</option>
-      <option value="fr">Français</option>
-      <option value="ar">العربية</option>
-    </select>
-  </div>
+  <select id="langSelect">
+    <option value="he">עברית</option>
+    <option value="en">English</option>
+    <option value="fr">Français</option>
+    <option value="ar">العربية</option>
+  </select>
 </header>
 
 <main>
   <h1 id="title"></h1>
   <p id="desc"></p>
 
-  <div class="actions">
-    <button id="confirmBtn"></button>
+  <div class="buttons">
+    <button id="joinBtn"></button>
     <button id="contactBtn"></button>
     <button id="infoBtn">&#8505; מידע נוסף</button>
   </div>
 
-  <div class="loader" id="loader">
+  <div class="overlay" id="overlay">
     <div class="spinner"></div>
-    <div id="loaderText"></div>
+    <div id="overlayText"></div>
+    <div class="error" id="overlayError"></div>
   </div>
 </main>
 
-<footer class="footer">
+<footer>
 © 2026 Netanya Football Organization. All rights reserved.
 </footer>
 
 <script>
-const texts = {
-  he:{
-    title:"הזמנה רשמית לאירוע כדורגל מיוחד",
-    desc:"נבחרת להשתתף באירוע כדורגל ייחודי המאורגן על ידי ארגון כדורגל נתניה.",
-    confirm:"אישור השתתפות",
-    contact:"צור קשר",
-    loading:"טוען נתונים, אנא המתן…",
-    error:"אירעה שגיאה זמנית. אנא נסה שוב מאוחר יותר."
-  },
-  en:{
-    title:"Official Invitation to a Special Football Event",
-    desc:"You have been selected to participate in a unique football event organized by Netanya Football.",
-    confirm:"Confirm Participation",
-    contact:"Contact Us",
-    loading:"Loading data, please wait…",
-    error:"A temporary error occurred. Please try again later."
-  },
-  fr:{
-    title:"Invitation officielle à un événement de football spécial",
-    desc:"Vous avez été sélectionné pour participer à un événement de football unique organisé par Netanya Football.",
-    confirm:"Confirmer la participation",
-    contact:"Nous contacter",
-    loading:"Chargement des données, veuillez patienter…",
-    error:"Une erreur temporaire s'est produite. Veuillez réessayer plus tard."
-  },
-  ar:{
-    title:"دعوة رسمية لحدث كرة قدم خاص",
-    desc:"تم اختيارك للمشاركة في حدث كرة قدم مميز تنظمه مؤسسة كرة القدم في نتانيا.",
-    confirm:"تأكيد المشاركة",
-    contact:"اتصل بنا",
-    loading:"جاري تحميل البيانات، يرجى الانتظار…",
-    error:"حدث خطأ مؤقت. يرجى المحاولة لاحقًا."
-  }
+const T={
+he:{
+ title:"הזמנה רשמית לאירוע כדורגל מיוחד",
+ desc:"נבחרת להשתתף באירוע כדורגל ייחודי המאורגן על ידי ארגון כדורגל נתניה.",
+ join:"אישור השתתפות",
+ contact:"צור קשר",
+ loading:"מעבד בקשה, אנא המתן…",
+ error:"המערכת אינה זמינה כעת. אנא נסה שוב מאוחר יותר.",
+ joined:"השתתפותך נרשמה בהצלחה."
+},
+en:{
+ title:"Official Invitation to a Special Football Event",
+ desc:"You have been selected to participate in a unique football event organized by Netanya Football.",
+ join:"Confirm Participation",
+ contact:"Contact Us",
+ loading:"Processing request, please wait…",
+ error:"The system is currently unavailable. Please try again later.",
+ joined:"Your participation has been successfully registered."
+},
+fr:{
+ title:"Invitation officielle à un événement de football spécial",
+ desc:"Vous avez été sélectionné pour participer à un événement de football unique organisé par Netanya Football.",
+ join:"Confirmer la participation",
+ contact:"Nous contacter",
+ loading:"Traitement de la demande, veuillez patienter…",
+ error:"Le système est momentanément indisponible.",
+ joined:"Votre participation a été enregistrée avec succès."
+},
+ar:{
+ title:"دعوة رسمية لحدث كرة قدم خاص",
+ desc:"تم اختيارك للمشاركة في حدث كرة قدم مميز تنظمه مؤسسة كرة القدم في نتانيا.",
+ join:"تأكيد المشاركة",
+ contact:"اتصل بنا",
+ loading:"جاري معالجة الطلب، يرجى الانتظار…",
+ error:"النظام غير متاح حاليًا. يرجى المحاولة لاحقًا.",
+ joined:"تم تسجيل مشاركتك بنجاح."
+}
 };
 
-let currentLang = localStorage.getItem("lang") || "he";
+let lang=localStorage.getItem("lang")||"he";
+const o=document.getElementById("overlay");
 
-function applyLang(lang){
-  currentLang = lang;
-  localStorage.setItem("lang", lang);
-  document.documentElement.lang = lang;
-  document.getElementById("title").innerText = texts[lang].title;
-  document.getElementById("desc").innerText = texts[lang].desc;
-  document.getElementById("confirmBtn").innerText = texts[lang].confirm;
-  document.getElementById("contactBtn").innerText = texts[lang].contact;
-  document.getElementById("loaderText").innerText = "";
-  document.getElementById("lang").value = lang;
+function apply(){
+ document.documentElement.lang=lang;
+ langSelect.value=lang;
+ title.innerText=T[lang].title;
+ desc.innerText=T[lang].desc;
+ joinBtn.innerText=T[lang].join;
+ contactBtn.innerText=T[lang].contact;
 }
+apply();
 
-applyLang(currentLang);
+langSelect.onchange=e=>{
+ lang=e.target.value;
+ localStorage.setItem("lang",lang);
+ apply();
+};
 
-document.getElementById("lang").addEventListener("change", e=>{
-  applyLang(e.target.value);
-});
+infoBtn.onclick=()=>location.href="info.html";
 
-document.getElementById("infoBtn").addEventListener("click", ()=>{
-  window.location.href = "info.html";
-});
+joinBtn.onclick=()=>{
+ o.style.display="flex";
+ overlayText.innerText=T[lang].loading;
+ overlayError.innerText="";
+ setTimeout(()=>{
+   overlayText.innerText=T[lang].joined;
+ },2000);
+};
 
-document.getElementById("contactBtn").addEventListener("click", ()=>{
-  const loader = document.getElementById("loader");
-  loader.style.display = "block";
-  document.getElementById("loaderText").innerText = texts[currentLang].loading;
-  setTimeout(()=>{
-    alert(texts[currentLang].error);
-    loader.style.display = "none";
-  }, 2600);
-});
+contactBtn.onclick=()=>{
+ o.style.display="flex";
+ overlayText.innerText=T[lang].loading;
+ overlayError.innerText="";
+ setTimeout(()=>{
+   overlayError.innerText=T[lang].error;
+ },2300);
+};
 </script>
 
 </body>
