--- a/info.html
+++ b/info.html
@@ -4,15 +4,29 @@
 <meta charset="UTF-8">
 <title>מידע נוסף | כדורגל נתניה</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#eef2f6;color:#111}
-header{background:#0b2a5b;color:#fff;padding:15px 25px;display:flex;justify-content:space-between;align-items:center}
-.brand{font-size:20px;font-weight:bold}
-.language select{padding:4px;font-size:13px;color:#000}
-.container{max-width:900px;margin:40px auto;background:#fff;padding:40px;box-shadow:0 0 20px rgba(0,0,0,.15);line-height:1.9}
-h1,h2,h3{color:#0b2a5b}
-.back{display:inline-flex;align-items:center;gap:8px;margin-bottom:20px;color:#0b2a5b;text-decoration:none;font-weight:bold}
-.footer{text-align:center;font-size:13px;color:#666;padding:25px}
+body { margin:0; font-family:Arial, sans-serif; background:#eef2f6; color:#111; }
+header {
+  background:#0b2a5b; color:#fff; padding:15px 25px;
+  display:flex; justify-content:space-between; align-items:center;
+}
+.brand { font-size:20px; font-weight:bold; }
+.language select { padding:4px; font-size:13px; color:#000; }
+
+.container {
+  max-width:900px; margin:40px auto; background:#fff; padding:40px;
+  box-shadow:0 0 20px rgba(0,0,0,.15); line-height:1.9;
+}
+h1,h2,h3 { color:#0b2a5b; }
+
+.back {
+  display:inline-flex; align-items:center; gap:8px; margin-bottom:20px;
+  color:#0b2a5b; cursor:pointer; text-decoration:none; font-weight:bold;
+}
+.back span { font-size:18px; }
+
+.footer { text-align:center; font-size:13px; color:#666; padding:25px; }
 </style>
 </head>
 
@@ -32,117 +46,100 @@ h1,h2,h3{color:#0b2a5b}
 
 <div class="container" id="content">
 
-<a class="back" href="index.html">← חזרה להזמנה</a>
+<a class="back" href="index.html"><span>←</span> חזרה להזמנה</a>
 
-<h1>תוכנית ההזמנות המיוחדות של כדורגל נתניה</h1>
+<h1>תוכנית ההזמנות המיוחדות – מידע מלא</h1>
 
 <p>
-כדורגל נתניה מפעילה לאורך השנה תוכנית הזמנות ייחודית, שמטרתה לאתר משתתפים בעלי
-זיקה מוכחת לעולם הכדורגל ולהעניק להם הזדמנות להשתתף באירועים סגורים ובלעדיים.
+כדורגל נתניה מפעילה לאורך השנה תוכנית הזמנות ייחודית, שמטרתה לאתר משתתפים
+בעלי זיקה מוכחת לעולם הכדורגל ולהעניק להם הזדמנות לקחת חלק באירועים מיוחדים,
+שאינם פתוחים לציבור הרחב.
 </p>
 
-<h2>רקע כללי</h2>
+<h2>רקע כללי על היוזמה</h2>
 <p>
-התוכנית הוקמה כחלק מפעילות קהילתית ומקצועית רחבה יותר, במטרה לחזק את הקשר בין
-המערכת המקצועית, הקהילה והמשתתפים עצמם. האירועים אינם פתוחים לקהל הרחב.
+היוזמה נולדה מתוך רצון לחזק את הקשר בין הקהילה, השחקנים והמערכת המקצועית,
+ולאפשר חוויות עומק למשתתפים שנמצאו מתאימים על פי קריטריונים מוגדרים מראש.
+האירועים מתקיימים במתכונת מצומצמת, בפיקוח מקצועי, ולעיתים כוללים תיעוד פנימי
+לצרכים ארגוניים ותקשורתיים.
 </p>
 
 <h2>מה כולל האירוע?</h2>
 <ul>
-<li>משחק כדורגל בפורמט ייחודי</li>
-<li>ליווי מקצועי ואירגוני</li>
-<li>נוכחות צוותים רלוונטיים</li>
-<li>חוויה שאינה חלק ממסגרת רגילה</li>
+  <li>משחק כדורגל ייעודי בפורמט מיוחד</li>
+  <li>נוכחות גורמים מקצועיים ואנשי צוות</li>
+  <li>תיאום מוקדם וליווי לוגיסטי</li>
+  <li>חוויה שאינה חלק מלוח משחקים רגיל</li>
 </ul>
 
-<h2>כיצד מתבצעת הבחירה?</h2>
+<h2>כיצד פועל מנגנון הבחירה?</h2>
 <p>
-הבחירה נעשית באמצעות מערכת אוטומטית המבוססת על נתונים קיימים, כגון השתתפות קודמת,
-מעורבות בפעילות ספורטיבית ורישומים היסטוריים.
+מערכת הבחירה פועלת באופן אוטומטי ומבוססת נתונים. המערכת בוחנת השתתפות קודמת
+בפעילות ספורטיבית, מעורבות קהילתית, ורישומים היסטוריים לאירועים דומים.
+הבחירה אינה אקראית ואינה מבוססת הרשמה פתוחה.
 </p>
 
-<h2>מדוע קיבלת הזמנה?</h2>
+<h2>מדוע קיבלת את ההזמנה?</h2>
 <p>
-נמצאה התאמה בין הפרופיל שלך לבין הקריטריונים של האירוע הקרוב. אין מדובר בהגרלה
-או בהרשמה פתוחה.
+הפרופיל שלך נמצא תואם לקריטריונים של אחד האירועים הקרובים. התאמה זו אינה
+מהווה התחייבות עתידית ואינה מבטיחה השתתפות קבועה, אלא הזדמנות חד-פעמית
+לאירוע מסוים.
 </p>
 
-<h2>לאחר אישור השתתפות</h2>
+<h2>שלבים לאחר אישור השתתפות</h2>
 <p>
-לאחר האישור, יישלחו פרטים נוספים הכוללים מיקום, זמני הגעה והנחיות כלליות.
+לאחר אישור ההשתתפות, תתבצע בדיקה טכנית של זמינות, ובהמשך יישלחו פרטים משלימים:
+מיקום, שעות, הנחיות כלליות וכל מידע רלוונטי נוסף.
 </p>
 
-<h3>הבהרות</h3>
+<h3>הבהרות חשובות</h3>
 <ul>
-<li>מספר המקומות מוגבל</li>
-<li>האירוע מיועד למוזמנים בלבד</li>
-<li>אין להעביר הזמנה לאחר</li>
-<li>ייתכנו שינויים בהתאם לשיקולים מקצועיים</li>
+  <li>מספר המקומות מוגבל</li>
+  <li>האירוע מיועד למוזמנים בלבד</li>
+  <li>אין להעביר את ההזמנה לצד שלישי</li>
+  <li>הנהלת כדורגל נתניה רשאית לבצע שינויים</li>
 </ul>
+
+<p>
+אם הגעת לעמוד זה – סימן שנבחרת להיכלל בקבוצה מצומצמת של מוזמנים.
+אנו ממליצים לעיין במידע בעיון לפני קבלת החלטה.
+</p>
 
 </div>
 
 <div class="footer">© 2026 Netanya Football Organization</div>
 
 <script>
-const translations = {
-en: `
-<a class="back" href="index.html">← Back to invitation</a>
-<h1>Netanya Football – Special Invitation Program</h1>
-<p>Netanya Football operates a selective invitation program throughout the year, designed to identify individuals with proven involvement in football-related activities.</p>
-<h2>General background</h2>
-<p>The program was created as part of a broader professional and community initiative and is not open to the general public.</p>
+const translations={
+en:`<a class="back" href="index.html"><span>←</span> Back to invitation</a>
+<h1>Special Invitation Program – Full Information</h1>
+<p>Netanya Football operates a selective invitation initiative throughout the year.</p>
+<h2>Program background</h2>
+<p>The initiative strengthens community and professional connections.</p>
 <h2>What does the event include?</h2>
-<ul><li>Special-format football match</li><li>Professional and organizational support</li><li>Relevant staff presence</li><li>A unique, non-standard experience</li></ul>
-<h2>How does the selection work?</h2>
-<p>Selection is carried out through an automated system based on existing data such as previous participation and involvement.</p>
-<h2>Why were you invited?</h2>
-<p>Your profile matched the criteria of an upcoming event. This is not a lottery or open registration.</p>
+<ul><li>Dedicated match format</li><li>Professional staff presence</li><li>Logistical coordination</li></ul>
+<h2>Selection mechanism</h2>
+<p>Automatic data-based selection. Not open registration.</p>
+<h2>Why you were selected</h2>
+<p>Your profile matched the event criteria.</p>
 <h2>After confirmation</h2>
-<p>Additional details including location and schedule will be sent after confirmation.</p>
-<h3>Important notes</h3>
-<ul><li>Limited availability</li><li>Invitation-only event</li><li>Invitations are non-transferable</li><li>Changes may occur</li></ul>
-`,
-fr: `
-<a class="back" href="index.html">← Retour à l'invitation</a>
-<h1>Programme d'invitation spéciale – Netanya Football</h1>
-<p>Netanya Football organise un programme sélectif destiné aux personnes ayant une implication avérée dans le football.</p>
-<h2>Contexte général</h2>
-<p>Ce programme fait partie d’une initiative communautaire et professionnelle plus large et n’est pas ouvert au public.</p>
-<h2>Contenu de l’événement</h2>
-<ul><li>Match de football à format spécial</li><li>Encadrement professionnel</li><li>Présence d’équipes dédiées</li><li>Expérience exclusive</li></ul>
-<h2>Processus de sélection</h2>
-<p>La sélection est effectuée automatiquement sur la base de données existantes.</p>
-<h2>Pourquoi avez-vous été invité ?</h2>
-<p>Votre profil correspond aux critères de l’événement à venir.</p>
-<h2>Après confirmation</h2>
-<p>Les détails pratiques seront communiqués ultérieurement.</p>
-<h3>Informations importantes</h3>
-<ul><li>Places limitées</li><li>Événement sur invitation uniquement</li><li>Invitation non transférable</li><li>Modifications possibles</li></ul>
-`,
-ar: `
-<a class="back" href="index.html">← العودة إلى الدعوة</a>
-<h1>برنامج الدعوة الخاصة – كرة قدم نتانيا</h1>
-<p>تدير كرة قدم نتانيا برنامج دعوات انتقائي على مدار العام مخصص للأشخاص ذوي الصلة المثبتة بعالم كرة القدم.</p>
-<h2>الخلفية العامة</h2>
-<p>تم إنشاء البرنامج ضمن مبادرة مهنية ومجتمعية أوسع وهو غير متاح للجمهور العام.</p>
-<h2>ماذا يشمل الحدث؟</h2>
-<ul><li>مباراة كرة قدم بصيغة خاصة</li><li>إشراف وتنظيم مهني</li><li>حضور طواقم مختصة</li><li>تجربة فريدة وغير تقليدية</li></ul>
-<h2>كيف تتم عملية الاختيار؟</h2>
-<p>يتم الاختيار تلقائيًا بناءً على بيانات المشاركة السابقة والانخراط في النشاطات.</p>
-<h2>لماذا تمت دعوتك؟</h2>
-<p>تمت مطابقة ملفك مع معايير الحدث القادم، ولا يعتبر ذلك تسجيلًا مفتوحًا.</p>
-<h2>بعد تأكيد المشاركة</h2>
-<p>سيتم إرسال تفاصيل إضافية حول الموقع والتوقيت لاحقًا.</p>
-<h3>ملاحظات هامة</h3>
-<ul><li>عدد الأماكن محدود</li><li>الحدث مخصص للمدعوين فقط</li><li>لا يمكن نقل الدعوة</li><li>قد تطرأ تغييرات</li></ul>
-`
+<p>Additional details will be sent closer to the date.</p>`,
+fr:`<a class="back" href="index.html"><span>←</span> Retour à l'invitation</a>
+<h1>Programme d'invitation spéciale – Informations complètes</h1>
+<p>Netanya Football organise une initiative sélective.</p>
+<h2>Contexte</h2><p>Renforcer le lien communautaire et professionnel.</p>
+<h2>Contenu de l'événement</h2>
+<ul><li>Match dédié</li><li>Équipe professionnelle</li></ul>
+<h2>Sélection</h2><p>Sélection automatique basée sur les données.</p>`,
+ar:`<a class="back" href="index.html"><span>←</span> العودة إلى الدعوة</a>
+<h1>برنامج الدعوة الخاصة – معلومات كاملة</h1>
+<p>تنظم كرة قدم نتانيا مبادرة انتقائية.</p>
+<h2>الخلفية</h2><p>تعزيز الروابط المجتمعية والمهنية.</p>
+<h2>محتوى الحدث</h2>
+<ul><li>مباراة مخصصة</li><li>طاقم محترف</li></ul>
+<h2>آلية الاختيار</h2><p>اختيار تلقائي قائم على البيانات.</p>`
 };
-
-function changeLang(l){
-  if(l==="he") location.reload();
-  else document.getElementById("content").innerHTML = translations[l];
-}
+function changeLang(l){ if(l==="he") location.reload(); else document.getElementById("content").innerHTML=translations[l]; }
 </script>
 
 </body>
