--- a/index.html
+++ b/index.html
@@ -2,17 +2,49 @@
 <html lang="he">
 <head>
 <meta charset="UTF-8">
-<title>מידע נוסף | כדורגל נתניה</title>
+<title>הזמנה רשמית | כדורגל נתניה</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#eef2f6;color:#111}
-header{background:#0b2a5b;color:#fff;padding:15px 25px;display:flex;justify-content:space-between;align-items:center}
-.brand{font-size:20px;font-weight:bold}
-.language select{padding:4px;font-size:13px;color:#000}
-.container{max-width:900px;margin:40px auto;background:#fff;padding:40px;box-shadow:0 0 20px rgba(0,0,0,.15);line-height:1.9}
-h1,h2,h3{color:#0b2a5b}
-.back{display:inline-flex;align-items:center;gap:8px;margin-bottom:20px;color:#0b2a5b;text-decoration:none;font-weight:bold}
-.footer{text-align:center;font-size:13px;color:#666;padding:25px}
+body { margin:0; font-family:Arial, sans-serif; background:#e9eef3; }
+header {
+  background:#0b2a5b; color:#fff; padding:15px 25px;
+  display:flex; justify-content:space-between; align-items:center;
+}
+.brand { display:flex; align-items:center; gap:10px; font-size:20px; font-weight:bold; }
+.language select { padding:4px; font-size:13px; color:#000; }
+
+.main {
+  max-width:800px; margin:50px auto; background:#fff; padding:40px;
+  box-shadow:0 0 20px rgba(0,0,0,.15);
+}
+h1 { color:#0b2a5b; }
+
+.buttons { margin-top:30px; display:flex; gap:15px; flex-wrap:wrap; }
+button {
+  padding:12px 20px; font-size:15px; border:0; border-radius:4px; cursor:pointer;
+}
+.confirm { background:#0b2a5b; color:#fff; }
+.info { background:#e0e0e0; }
+.contact { background:#f5f5f5; }
+
+/* overlay + spinner */
+#overlay {
+  position:fixed; inset:0; background:rgba(0,0,0,.6);
+  display:none; align-items:center; justify-content:center; flex-direction:column;
+}
+.spinner {
+  width:48px; height:48px; border:5px solid #ddd; border-top-color:#0b2a5b;
+  border-radius:50%; animation:spin 1s linear infinite; margin-bottom:12px;
+}
+@keyframes spin { to { transform:rotate(360deg); } }
+
+/* info icon (NOT emoji) */
+.info-icon {
+  display:inline-flex; align-items:center; justify-content:center;
+  width:18px; height:18px; border:1.5px solid #333; border-radius:50%;
+  font-size:12px; font-weight:bold; margin-right:6px;
+}
 </style>
 </head>
 
@@ -30,119 +62,63 @@ h1,h2,h3{color:#0b2a5b}
   </div>
 </header>
 
-<div class="container" id="content">
+<div class="main" id="content">
+  <h1>הזמנה לאירוע כדורגל מיוחד</h1>
+  <p>
+    נבחרת להשתתף באירוע ייחודי של כדורגל נתניה.
+    מספר המקומות מוגבל וההשתתפות מותנית באישור מוקדם.
+  </p>
 
-<a class="back" href="index.html">← חזרה להזמנה</a>
-
-<h1>תוכנית ההזמנות המיוחדות של כדורגל נתניה</h1>
-
-<p>
-כדורגל נתניה מפעילה לאורך השנה תוכנית הזמנות ייחודית, שמטרתה לאתר משתתפים בעלי
-זיקה מוכחת לעולם הכדורגל ולהעניק להם הזדמנות להשתתף באירועים סגורים ובלעדיים.
-</p>
-
-<h2>רקע כללי</h2>
-<p>
-התוכנית הוקמה כחלק מפעילות קהילתית ומקצועית רחבה יותר, במטרה לחזק את הקשר בין
-המערכת המקצועית, הקהילה והמשתתפים עצמם. האירועים אינם פתוחים לקהל הרחב.
-</p>
-
-<h2>מה כולל האירוע?</h2>
-<ul>
-<li>משחק כדורגל בפורמט ייחודי</li>
-<li>ליווי מקצועי ואירגוני</li>
-<li>נוכחות צוותים רלוונטיים</li>
-<li>חוויה שאינה חלק ממסגרת רגילה</li>
-</ul>
-
-<h2>כיצד מתבצעת הבחירה?</h2>
-<p>
-הבחירה נעשית באמצעות מערכת אוטומטית המבוססת על נתונים קיימים, כגון השתתפות קודמת,
-מעורבות בפעילות ספורטיבית ורישומים היסטוריים.
-</p>
-
-<h2>מדוע קיבלת הזמנה?</h2>
-<p>
-נמצאה התאמה בין הפרופיל שלך לבין הקריטריונים של האירוע הקרוב. אין מדובר בהגרלה
-או בהרשמה פתוחה.
-</p>
-
-<h2>לאחר אישור השתתפות</h2>
-<p>
-לאחר האישור, יישלחו פרטים נוספים הכוללים מיקום, זמני הגעה והנחיות כלליות.
-</p>
-
-<h3>הבהרות</h3>
-<ul>
-<li>מספר המקומות מוגבל</li>
-<li>האירוע מיועד למוזמנים בלבד</li>
-<li>אין להעביר הזמנה לאחר</li>
-<li>ייתכנו שינויים בהתאם לשיקולים מקצועיים</li>
-</ul>
-
+  <div class="buttons">
+    <button class="confirm" onclick="playSound()">אישור השתתפות</button>
+    <button class="info" onclick="location.href='info.html'">
+      <span class="info-icon">i</span>מידע נוסף
+    </button>
+    <button class="contact" onclick="contact()">צור קשר</button>
+  </div>
 </div>
 
-<div class="footer">© 2026 Netanya Football Organization</div>
+<div id="overlay">
+  <div class="spinner"></div>
+  <div style="color:#fff">מבצע אימות…</div>
+</div>
+
+<audio id="sound" src="ston.mp3"></audio>
 
 <script>
-const translations = {
-en: `
-<a class="back" href="index.html">← Back to invitation</a>
-<h1>Netanya Football – Special Invitation Program</h1>
-<p>Netanya Football operates a selective invitation program throughout the year, designed to identify individuals with proven involvement in football-related activities.</p>
-<h2>General background</h2>
-<p>The program was created as part of a broader professional and community initiative and is not open to the general public.</p>
-<h2>What does the event include?</h2>
-<ul><li>Special-format football match</li><li>Professional and organizational support</li><li>Relevant staff presence</li><li>A unique, non-standard experience</li></ul>
-<h2>How does the selection work?</h2>
-<p>Selection is carried out through an automated system based on existing data such as previous participation and involvement.</p>
-<h2>Why were you invited?</h2>
-<p>Your profile matched the criteria of an upcoming event. This is not a lottery or open registration.</p>
-<h2>After confirmation</h2>
-<p>Additional details including location and schedule will be sent after confirmation.</p>
-<h3>Important notes</h3>
-<ul><li>Limited availability</li><li>Invitation-only event</li><li>Invitations are non-transferable</li><li>Changes may occur</li></ul>
-`,
-fr: `
-<a class="back" href="index.html">← Retour à l'invitation</a>
-<h1>Programme d'invitation spéciale – Netanya Football</h1>
-<p>Netanya Football organise un programme sélectif destiné aux personnes ayant une implication avérée dans le football.</p>
-<h2>Contexte général</h2>
-<p>Ce programme fait partie d’une initiative communautaire et professionnelle plus large et n’est pas ouvert au public.</p>
-<h2>Contenu de l’événement</h2>
-<ul><li>Match de football à format spécial</li><li>Encadrement professionnel</li><li>Présence d’équipes dédiées</li><li>Expérience exclusive</li></ul>
-<h2>Processus de sélection</h2>
-<p>La sélection est effectuée automatiquement sur la base de données existantes.</p>
-<h2>Pourquoi avez-vous été invité ?</h2>
-<p>Votre profil correspond aux critères de l’événement à venir.</p>
-<h2>Après confirmation</h2>
-<p>Les détails pratiques seront communiqués ultérieurement.</p>
-<h3>Informations importantes</h3>
-<ul><li>Places limitées</li><li>Événement sur invitation uniquement</li><li>Invitation non transférable</li><li>Modifications possibles</li></ul>
-`,
-ar: `
-<a class="back" href="index.html">← العودة إلى الدعوة</a>
-<h1>برنامج الدعوة الخاصة – كرة قدم نتانيا</h1>
-<p>تدير كرة قدم نتانيا برنامج دعوات انتقائي على مدار العام مخصص للأشخاص ذوي الصلة المثبتة بعالم كرة القدم.</p>
-<h2>الخلفية العامة</h2>
-<p>تم إنشاء البرنامج ضمن مبادرة مهنية ومجتمعية أوسع وهو غير متاح للجمهور العام.</p>
-<h2>ماذا يشمل الحدث؟</h2>
-<ul><li>مباراة كرة قدم بصيغة خاصة</li><li>إشراف وتنظيم مهني</li><li>حضور طواقم مختصة</li><li>تجربة فريدة وغير تقليدية</li></ul>
-<h2>كيف تتم عملية الاختيار؟</h2>
-<p>يتم الاختيار تلقائيًا بناءً على بيانات المشاركة السابقة والانخراط في النشاطات.</p>
-<h2>لماذا تمت دعوتك؟</h2>
-<p>تمت مطابقة ملفك مع معايير الحدث القادم، ولا يعتبر ذلك تسجيلًا مفتوحًا.</p>
-<h2>بعد تأكيد المشاركة</h2>
-<p>سيتم إرسال تفاصيل إضافية حول الموقع والتوقيت لاحقًا.</p>
-<h3>ملاحظات هامة</h3>
-<ul><li>عدد الأماكن محدود</li><li>الحدث مخصص للمدعوين فقط</li><li>لا يمكن نقل الدعوة</li><li>قد تطرأ تغييرات</li></ul>
-`
-};
+function playSound(){ document.getElementById("sound").play(); }
 
-function changeLang(l){
-  if(l==="he") location.reload();
-  else document.getElementById("content").innerHTML = translations[l];
+function contact(){
+  const o=document.getElementById("overlay");
+  o.style.display="flex";
+  setTimeout(()=>{ o.querySelector('div:last-child').innerText="שגיאה זמנית. נסה שוב מאוחר יותר."; },2500);
+  setTimeout(()=>{ o.style.display="none"; o.querySelector('div:last-child').innerText="מבצע אימות…"; },5000);
 }
+
+const translations={
+en:`<h1>Official Football Event Invitation</h1>
+<p>You have been selected to participate in a special football event.</p>
+<div class="buttons">
+<button class="confirm" onclick="playSound()">Confirm Participation</button>
+<button class="info" onclick="location.href='info.html'"><span class="info-icon">i</span>More Information</button>
+<button class="contact" onclick="contact()">Contact Us</button>
+</div>`,
+fr:`<h1>Invitation officielle à un événement de football</h1>
+<p>Vous avez été sélectionné pour participer à un événement spécial.</p>
+<div class="buttons">
+<button class="confirm" onclick="playSound()">Confirmer</button>
+<button class="info" onclick="location.href='info.html'"><span class="info-icon">i</span>Plus d'informations</button>
+<button class="contact" onclick="contact()">Contact</button>
+</div>`,
+ar:`<h1>دعوة رسمية لحدث كرة قدم</h1>
+<p>تم اختيارك للمشاركة في حدث خاص.</p>
+<div class="buttons">
+<button class="confirm" onclick="playSound()">تأكيد المشاركة</button>
+<button class="info" onclick="location.href='info.html'"><span class="info-icon">i</span>معلومات إضافية</button>
+<button class="contact" onclick="contact()">اتصل بنا</button>
+</div>`
+};
+function changeLang(l){ if(l==="he") location.reload(); else document.getElementById("content").innerHTML=translations[l]; }
 </script>
 
 </body>
