--- a/index.html
+++ b/index.html
@@ -121,5 +121,7 @@ ar:`<h1>دعوة رسمية لحدث كرة قدم</h1>
 function changeLang(l){ if(l==="he") location.reload(); else document.getElementById("content").innerHTML=translations[l]; }
 </script>
 
-</body>
+<footer class="footer">
+  © 2026 Netanya Football Organization · All rights reserved
+</footer></body>
 </html>
