--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@ button {
   width:18px; height:18px; border:1.5px solid #333; border-radius:50%;
   font-size:12px; font-weight:bold; margin-right:6px;
 }
-</style>
+.footer {
+  text-align: center;
+  font-size: 13px;
+  color: #666;
+  margin: 30px 0 15px;
+}</style>
 </head>
 
 <body>
