--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ button {
 .info { background:#e0e0e0; }
 .contact { background:#f5f5f5; }
 
-/* INFO ICON (НЕ emoji) */
+/* INFO ICON */
 .info-icon {
   display:inline-flex; align-items:center; justify-content:center;
   width:18px; height:18px;
@@ -65,9 +65,7 @@ button {
   margin-bottom:12px;
 }
 
-@keyframes spin {
-  to { transform:rotate(360deg); }
-}
+@keyframes spin { to { transform:rotate(360deg); } }
 
 #overlayText {
   color:#fff;
@@ -164,7 +162,7 @@ button {
 
 <div id="overlay">
   <div class="spinner"></div>
-  <div id="overlayText">Connecting to server…</div>
+  <div id="overlayText">מתחבר לשרת…</div>
 </div>
 
 <div id="errorModal">
@@ -207,9 +205,18 @@ function startLoudLoop(){
 
 document.addEventListener("click",()=>audioContext?.resume(),{once:true});
 
-/* ===== ERROR TEXTS ===== */
+/* ===== LANG STATE ===== */
 let currentLang="he";
 
+/* ===== LOADING TEXTS ===== */
+const loadingTexts={
+  he:{connect:"מתחבר לשרת…",auth:"מאמת בקשה…"},
+  en:{connect:"Connecting to server…",auth:"Authorizing request…"},
+  fr:{connect:"Connexion au serveur…",auth:"Autorisation de la requête…"},
+  ar:{connect:"جارٍ الاتصال بالخادم…",auth:"جارٍ التحقق من الطلب…"}
+};
+
+/* ===== ERROR TEXTS ===== */
 const errorTexts={
   he:{title:"שגיאה",message:"שגיאה זמנית. אנא נסה שוב מאוחר יותר.",ok:"אישור"},
   en:{title:"Error",message:"Temporary error. Please try again later.",ok:"OK"},
@@ -221,11 +228,12 @@ const errorTexts={
 function contact(){
   const o=document.getElementById("overlay");
   const t=document.getElementById("overlayText");
+  const l=loadingTexts[currentLang];
 
   o.style.display="flex";
-  t.innerText="Connecting to server…";
+  t.innerText=l.connect;
 
-  setTimeout(()=>t.innerText="Authorizing request…",1500);
+  setTimeout(()=>t.innerText=l.auth,1500);
 
   setTimeout(()=>{
     o.style.display="none";
@@ -245,7 +253,7 @@ function closeError(){
   errorModal.style.display="none";
 }
 
-/* ===== LANG ===== */
+/* ===== PAGE TRANSLATIONS ===== */
 const translations={
 en:`<h1>Official Football Event Invitation</h1>
 <p>You have been selected to participate in a special football event.</p>
